k8s/inference-pipeline-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: breast-cancer-detection-ml-inference-pipeline-deployment
  # namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference
  template:
    metadata:
      labels:
        app: inference
    spec:
      containers:
        - name: inference
          image: pauloyuncha/breast-cancer-detection-ml:latest
          command: ["uv"]
          args:
            - run
            - python3
            - tools/ml_service.py
            - --model-path
            - __MODEL_URL__
            - --preprocessor-path
            - __PREPROCESSOR_URL__
            - --port
            - "8000"
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: "800Mi"
            requests:
              cpu: "0.5"
              memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: inference
  # namespace: dev
spec:
  selector:
    app: inference
  ports:
    - name: http
      # Uncomment the next line to use LoadBalancer
      # and Comment the NodePort section
      # type: LoadBalancer
      port: 8501
      targetPort: 8000
      # nodePort: 30000
    # - name: nginx
    #   port: 80
    #   targetPort: 80
    #   nodePort: 30001
  type: LoadBalancer
  # type: NodePort
