k8s/inference-pipeline-with-helm-observability.yaml





apiVersion: apps/v1
kind: Deployment
metadata:
  name: breast-cancer-detection-ml-inference-pipeline-deployment
  namespace: production
spec:
  replicas: 4
  selector:
    matchLabels:
      app: inference
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
      labels:
        app: inference
    spec:
      
      containers:
        - name: inference
          image: pauloyuncha/breast-cancer-detection-ml:latest
          command: ["uv"]
          args:
            - run
            - python3
            - tools/ml_service.py
            - --model-path
            - "/opt/ml/models/logistic_regression.joblib"
            - --preprocessor-path
            - "/opt/ml/models/preprocessor.joblib"
            - --port
            - "8000"
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: "800Mi"
            requests:
              cpu: "0.5"
              memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: inference
  namespace: production
spec:
  selector:
    app: inference
  ports:
    - name: http
      port: 8501
      targetPort: 8000
      protocol: TCP
  type: LoadBalancer




---
